<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".NewMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:capitalize="words"
            android:ems="10"
            android:hint="@string/title_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/date_input"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@android:color/darker_gray" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/time_input"
                android:importantForAutofill="no"
                android:inputType="time"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@android:color/darker_gray" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="ToggleButton"
                android:textColor="@android:color/background_light"
                android:textOff="am"
                android:textOn="pm" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextPresiding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/presiding_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextConducting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/conducting_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editTextOpeningHymn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/opening_hymn_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextInvocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/invocation_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextWardBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/ward_business_input"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextSacramentHymn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sacrament_hymn_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextFirstSpeaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/speaker_1_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextSecondSpeaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/speaker_2_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextSpecialHymn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/special_hymn_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextThirdSpeaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/speaker_3_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextClosingHymn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/closing_hymn_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextBenediction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/benediction_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextAttendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/attendance_input"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/notes_input"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:contentDescription="@string/remove_warning_button"
                app:srcCompat="@android:color/background_light" />

            <ImageButton
                android:id="@+id/imageButtonCancelTemplate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/cancel_button"
                app:srcCompat="@drawable/ic_cancel_24dp" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:contentDescription="@string/remove_warning_button"
                app:srcCompat="@android:color/background_light" />

            <ImageButton
                android:id="@+id/imageButtonSaveTemplate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/save_new_meeting_button"
                app:srcCompat="@drawable/ic_save_button_24dp" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:contentDescription="@string/remove_warning_button"
                app:srcCompat="@android:color/background_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>