<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="119dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="140dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up_button"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/username_input"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/background_light"
        android:text="@string/login_button"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.009" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password_button"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="140dp"
        android:background="@color/colorPrimary"
        android:text="@string/forget_password_button"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>